--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -13,7 +13,8 @@
     <div class="well">
         <ul>
             <li>
-                Data Science professional with a decade of experience in the telecommunications, ad tech, and financial service sectors.
+                Data Science professional with a decade of experience in the telecommunications, ad tech, and financial
+                service sectors.
             </li>
             <li>
                 Able to derive insights and extract business value from data sets with thousands to billions of rows.
@@ -36,19 +37,24 @@
 
         <ul>
             <li>
-                Consolidated Point of Interest (POI) data from multiple sources to build a single POI database used across the company.
+                Consolidated Point of Interest (POI) data from multiple sources to build a single POI database used
+                across the company.
             </li>
 
             <li>
-                Combined the POI dataset with GPS and network location data to build a Visits dataset. Worked closely with product managers to ensure that the product aligned with customer expectations. Performed several white glove analyses for customer trials, which received positive feedback.
+                Combined the POI dataset with GPS and network location data to build a Visits dataset. Worked closely
+                with product managers to ensure that the product aligned with customer expectations. Performed several
+                white glove analyses for customer trials, which received positive feedback.
             </li>
 
             <li>
-                Worked closely with Data Engineering to productionalize the Visits product, and to quickly deploy hotfixes and feature enhancements.
+                Worked closely with Data Engineering to productionalize the Visits product, and to quickly deploy
+                hotfixes and feature enhancements.
             </li>
 
             <li>
-                Used multiple data sources--including scraping and third-party APIs--to build and maintain a mapping from URLs to publishers.
+                Used multiple data sources--including scraping and third-party APIs--to build and maintain a mapping
+                from URLs to publishers.
             </li>
 
             <li>
@@ -65,22 +71,26 @@
 
         <ul>
             <li>
-                Built recommender engines for our on-device monetization products. Worked with development teams to ensure that the back
+                Built recommender engines for our on-device monetization products. Worked with development teams to
+                ensure that the back
                 end would be set up for AB testing.
             </li>
             <li>
                 Streamlined the ETL processes for building AB testing dashboards.
             </li>
             <li>
-                Contributed to a project of predicting demographic attributes for users in our real-time bidding (RTB) system. This resulted
+                Contributed to a project of predicting demographic attributes for users in our real-time bidding (RTB)
+                system. This resulted
                 in collaborations with Marketing that led to two whitepapers:
 
                 <ul>
                     <li>
-                        <a href="http://whitepaper.pinsightmedia.com/age">Guess My Age: Age Discrepancies Across Ad Exchanges</a>
+                        <a href="http://whitepaper.pinsightmedia.com/age">Guess My Age: Age Discrepancies Across Ad
+                            Exchanges</a>
                     </li>
                     <li>
-                        <a href="https://pinsightmedia.com/blog/apptopicmodeling">There's an App for That: But What Does It Say About My Consumer?</a>
+                        <a href="https://pinsightmedia.com/blog/apptopicmodeling">There's an App for That: But What Does
+                            It Say About My Consumer?</a>
                     </li>
                 </ul>
             </li>
@@ -98,21 +108,27 @@
 
             <li>Prototyped a product for acquisition of financial advisors.</li>
 
-            <li>Contributed towards an Advisor Segmentation product, including a method of streamlining and summarizing the differences
+            <li>Contributed towards an Advisor Segmentation product, including a method of streamlining and summarizing
+                the differences
                 between segments.</li>
 
-            <li>Built a prototype of the Mapper Algorithm (as used in Topological Data Analysis) to better understand high-dimensional
-                data sets. The prototype is written in Python and leverages a Greenplum cluster by way of SQL templates.</li>
+            <li>Built a prototype of the Mapper Algorithm (as used in Topological Data Analysis) to better understand
+                high-dimensional
+                data sets. The prototype is written in Python and leverages a Greenplum cluster by way of SQL templates.
+            </li>
 
-            <li>Built prototypes for three components of DST's Predictive Wholesaling product, and assisted the AAG Development
+            <li>Built prototypes for three components of DST's Predictive Wholesaling product, and assisted the AAG
+                Development
                 team in productionizing the prototypes.</li>
 
-            <li>Created and prototyped a Share Retention metric that provides a measurement of "stickiness" of fund holdings
+            <li>Created and prototyped a Share Retention metric that provides a measurement of "stickiness" of fund
+                holdings
                 that does not directly depend on price.</li>
 
             <li>Assisted in building models for a proof of concept for a client.</li>
 
-            <li>Mentored and taught Python to a few members of the Networking team, to facilitate the creation of a Flask web
+            <li>Mentored and taught Python to a few members of the Networking team, to facilitate the creation of a
+                Flask web
                 app to automate some types of network change requests.</li>
 
             <li>Mentoring other members of the Data Science team.</li>
@@ -125,12 +141,14 @@
         <p>Data Scientist - May 2013--November 2013</p>
 
         <ul>
-            <li>Created and cross-validated probit regression models to find the most significant attributes upon which to sort
+            <li>Created and cross-validated probit regression models to find the most significant attributes upon which
+                to sort
                 call queues in order to increase customer retention.</li>
 
             <li>Built an ETL pipeline to import data from a new dialer system.</li>
 
-            <li>Delivered a proposal outlining options for a Data Warehouse solution, including pros and cons of each option.</li>
+            <li>Delivered a proposal outlining options for a Data Warehouse solution, including pros and cons of each
+                option.</li>
 
             <li>Built, Validated, and Deployed business intelligence reports using QlikView.</li>
         </ul>
@@ -141,7 +159,8 @@
         <p>Implementation Specialist (Contract) - January 2013--May 2013</p>
 
         <ul>
-            <li>Optimized the C2FO algorithm for Market Clearing Events, making it run an average of two orders of magnitude
+            <li>Optimized the C2FO algorithm for Market Clearing Events, making it run an average of two orders of
+                magnitude
                 faster.
             </li>
             <li>Organized the restructuring of several KPI business intelligence reports.</li>
@@ -161,31 +180,40 @@
         </ul>
 
         <ul>
-            <li>Performed data mining and summarized results that contributed to the winning of a $50,000 advertiser contract</li>
+            <li>Performed data mining and summarized results that contributed to the winning of a $50,000 advertiser
+                contract</li>
 
-            <li>Presented technical and mathematical concepts to non-technical audiences, including several layers of management
+            <li>Presented technical and mathematical concepts to non-technical audiences, including several layers of
+                management
                 and a venture capital investor.</li>
 
             <li>Developed an application in Perl using
                 <a href="https://metacpan.org/module/DBI">DBI</a> for
-                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B">k-means++ clustering</a>. This application is able to handle data sets of millions of rows with 1--100 variables.</li>
+                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B">k-means++ clustering</a>. This application is able
+                to handle data sets of millions of rows with 1--100 variables.</li>
 
-            <li>Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250 variables--that was
+            <li>Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250
+                variables--that was
                 previously thought impossible to implement due to scale</li>
 
-            <li>Built, implemented, deployed, and maintained an ad category recommendation system for advertisers, including
+            <li>Built, implemented, deployed, and maintained an ad category recommendation system for advertisers,
+                including
                 developing and measuring performance metrics</li>
 
             <li>Implemented a genetic algorithm framework to use for behavioral targeting algorithms</li>
 
-            <li>Maintained and documented the ETL pipelines to the Data Analytics team, consisting of over 200 scripts in Perl
+            <li>Maintained and documented the ETL pipelines to the Data Analytics team, consisting of over 200 scripts
+                in Perl
                 and Python interfacing with Greenplum, PostgreSQL, Oracle, MySQL, MS SQL, and ActiveMQ </li>
 
-            <li>Refactored and maintained critical business intelligence reports used by machine learning scientists</li>
+            <li>Refactored and maintained critical business intelligence reports used by machine learning scientists
+            </li>
 
-            <li>Prototyped a flexible, extensible ETL system to reduce a lot of boilerplate code in existing ETL scripts</li>
+            <li>Prototyped a flexible, extensible ETL system to reduce a lot of boilerplate code in existing ETL scripts
+            </li>
 
-            <li>Created a web-based data dictionary to store metadata about tables in our warehouse. The front end was written
+            <li>Created a web-based data dictionary to store metadata about tables in our warehouse. The front end was
+                written
                 in PHP with SQLite on the back-end to store the metadata.</li>
 
             <li>Considered a resident expert of our data warehouse</li>
@@ -206,7 +234,8 @@
 
             <li>Sole organizer and director of a regional undergraduate mathematics conference</li>
 
-            <li>Taught several courses, including College Algebra, Trigonometry, Calculus (I--III), Foundations of Mathematics,
+            <li>Taught several courses, including College Algebra, Trigonometry, Calculus (I--III), Foundations of
+                Mathematics,
                 Matrix Theory, and Abstract Algebra</li>
 
             <li>Served and chaired several committees, including the Curriculum &amp; Instruction committee</li>
@@ -222,17 +251,22 @@
         </h3>
 
         <p>At the 2011 Joint Statistical Meetings,
-            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386">a paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This coefficient measures
+            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386">a
+                paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This
+            coefficient measures
             the degree of dependency (but not the form of dependency) for two discrete random variables.</p>
 
-        <p>I have written an R library that implements this Universal Correlation Coefficient. This coefficient can be used
-            to automate the discovery of (potentially non-linear) relationships among pairs of discrete random variables.</p>
+        <p>I have written an R library that implements this Universal Correlation Coefficient. This coefficient can be
+            used
+            to automate the discovery of (potentially non-linear) relationships among pairs of discrete random
+            variables.</p>
 
     </div>
 
     <div class="well">
         <h3>
-            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#">pg-utils: Utilities for working with PostgreSQL</a>
+            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#">pg-utils: Utilities for working with
+                PostgreSQL</a>
         </h3>
 
         <p>Some handy utilities that I've written for processing data in either PostgreSQL or Greenplum.</p>
@@ -244,7 +278,9 @@
             <a href="https://github.com/jackmaney/python-stdlib-list">Python Standard Library List</a>
         </h3>
 
-        <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-8), along with the code used to grab the list of libraries from the official Python docs. This is my most popular repository on GitHub.</p>
+        <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-8), along with the
+            code used to grab the list of libraries from the official Python docs. This is my most popular repository on
+            GitHub.</p>
 
     </div>
 
@@ -253,7 +289,9 @@
             <a href="https://github.com/jackmaney/Diophantus">Diophantus</a>
         </h3>
 
-        <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a graduate student. The original code generated examples and helped form conjectures for what became a series of two peer-reviewed mathematical publications.</p>
+        <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a
+            graduate student. The original code generated examples and helped form conjectures for what became a series
+            of two peer-reviewed mathematical publications.</p>
     </div>
 
     <h2>Skills</h2>
@@ -283,7 +321,8 @@
 
             <li>
                 Relational Databases,
-                <a href="http://www.greenplum.com/">Greenplum</a> (Massively Parallel Processing Distributed System), PostgreSQL, Oracle, MySQL, Microsoft SQL
+                <a href="http://www.greenplum.com/">Greenplum</a> (Massively Parallel Processing Distributed System),
+                PostgreSQL, Oracle, MySQL, Microsoft SQL
                 Server, MS SQL, OLAP, SQL
             </li>
 
@@ -299,7 +338,8 @@
 
             <li>
                 Perl,
-                <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared, Thread::Queue, Template::Toolkit
+                <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared,
+                Thread::Queue, Template::Toolkit
             </li>
 
             <li>Git, SVN, GitHub, GitLab, Assembla, Source Control, Version Control</li>
