--- a/_includes/resume_buttons.html
+++ b/_includes/resume_buttons.html
@@ -1,10 +1,11 @@
 <div id="resume-buttons">
     <a id="printable-link" href="{{ site.baseurl }}/resume/printable">
-        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Printable HTML version (without the navbar, etc)">
+        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom"
+            title="Printable HTML version (without the navbar, etc)">
             <i class="fa fa-print" aria-hidden="true"></i>
         </button>
     </a>
-    
+
     <a id="pdf-link" href="{{ site.baseurl }}/resume/Jack_Maney_Resume.pdf">
         <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="PDF version">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
