--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,8 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -17,30 +18,33 @@
                 {% if page.url == "/resume/" %}
                 <li class="active">
                     {% else %}
-                    <li>
-                        {% endif %}
-                        <a href="/resume/">Resume <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/jackmaney"><i class="fa fa-linkedin-square"></i></a> {% if page.is_code_page %}
-                        <li class="dropdown active">
-                            {% else %}
-                            <li class="dropdown">
-                                {% endif %}
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Code Projects <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="/code/diophantus/">Diophantus </a>
-                                    </li>
-                                    <li><a href="/code/ucc/">Universal Correlation Coefficient</a>
-                                    </li>
-                                </ul>
-                            </li>
+                <li>
+                    {% endif %}
+                    <a href="/resume/">Resume <span class="sr-only">(current)</span></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jackmaney"><i class="fa fa-linkedin-square"></i></a>
+                    {% if page.is_code_page %}
+                <li class="dropdown active">
+                    {% else %}
+                <li class="dropdown">
+                    {% endif %}
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Code
+                        Projects <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="/code/diophantus/">Diophantus </a>
+                        </li>
+                        <li><a href="/code/ucc/">Universal Correlation Coefficient</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     {% if page.code_url %}
                     <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> {% else %}
-                    <a href="https://github.com/jackmaney/jackmaney.github.io"><i class="fa fa-github"></i></a> {% endif %}
+                    <a href="https://github.com/jackmaney/jackmaney.github.io"><i class="fa fa-github"></i></a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
