--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><i class="fa fa-home"></i></a>
+            <a class="navbar-brand" href="/" ><i class="fa fa-home"></i></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -23,7 +23,9 @@
                     <a href="/resume/">Resume <span class="sr-only">(current)</span></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/jackmaney"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/in/jackmaney" target="_blank">
+                        <i class="fa fa-linkedin-square"></i>
+                    </a>
                     {% if page.is_code_page %}
                 <li class="dropdown active">
                     {% else %}
@@ -43,7 +45,7 @@
                 <li>
                     {% if page.code_url %}
                     <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> {% else %}
-                    <a href="https://github.com/jackmaney/jackmaney.github.io"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/jackmaney/jackmaney.github.io" target="_blank"><i class="fa fa-github"></i></a>
                     {% endif %}
                 </li>
             </ul>
