--- a/_includes/resume_buttons.html
+++ b/_includes/resume_buttons.html
@@ -1,12 +1,12 @@
 <div id="resume-buttons">
-    <a id="printable-link" href="{{ site.baseurl }}/resume/printable">
+    <a id="printable-link" href="{{ site.baseurl }}/resume/printable" target="_blank">
         <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom"
             title="Printable HTML version (without the navbar, etc)">
             <i class="fa fa-print" aria-hidden="true"></i>
         </button>
     </a>
 
-    <a id="pdf-link" href="{{ site.baseurl }}/resume/Jack_Maney_Resume.pdf">
+    <a id="pdf-link" href="{{ site.baseurl }}/resume/Jack_Maney_Resume.pdf" target="_blank">
         <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="PDF version">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
         </button>
