--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -35,6 +35,12 @@
         <h3>TruFactor</h3>
         <p>Lead Data Scientist - November 2018--May 2020</p>
 
+        <p>
+            <small>
+            After Pinsight Media was acquired by InMobi, <a href="https://www.inmobi.com/company/press/inmobi-launches-trufactor-a-secure-data-platform-for-telcos/" target="_blank">there was a reorganization into a few business units, one of which was TruFactor.</a>
+            </small>
+        </p>
+
         <ul>
             <li>
                 Consolidated Point of Interest (POI) data from multiple sources to build a single POI database used
@@ -69,6 +75,8 @@
         <h3>Pinsight Media</h3>
         <p>Data Scientist III - October 2016--October 2018</p>
 
+        <p><small>Pinsight Media <a href="https://www.inmobi.com/company/press/inmobi-acquires-u.s.-based-advertising-and-data-company-pinsight-media/" target="_blank">was acquired by InMobi</a> in 2018.</small></p>
+
         <ul>
             <li>
                 Built recommender engines for our on-device monetization products. Worked with development teams to
@@ -85,11 +93,11 @@
 
                 <ul>
                     <li>
-                        <a href="http://whitepaper.pinsightmedia.com/age">Guess My Age: Age Discrepancies Across Ad
+                        <a href="http://whitepaper.pinsightmedia.com/age" target="_blank">Guess My Age: Age Discrepancies Across Ad
                             Exchanges</a>
                     </li>
                     <li>
-                        <a href="https://pinsightmedia.com/blog/apptopicmodeling">There's an App for That: But What Does
+                        <a href="https://pinsightmedia.com/blog/apptopicmodeling" target="_blank">There's an App for That: But What Does
                             It Say About My Consumer?</a>
                     </li>
                 </ul>
@@ -188,8 +196,8 @@
                 and a venture capital investor.</li>
 
             <li>Developed an application in Perl using
-                <a href="https://metacpan.org/module/DBI">DBI</a> for
-                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B">k-means++ clustering</a>. This application is able
+                <a href="https://metacpan.org/module/DBI" target="_blank">DBI</a> for
+                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B" target="_blank">k-means++ clustering</a>. This application is able
                 to handle data sets of millions of rows with 1--100 variables.</li>
 
             <li>Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250
@@ -247,11 +255,11 @@
 
     <div class="well">
         <h3>
-            <a href="https://github.com/jackmaney/ucc">Universal Correlation Coefficient</a>
+            <a href="https://github.com/jackmaney/ucc" target="_blank">Universal Correlation Coefficient</a>
         </h3>
 
         <p>At the 2011 Joint Statistical Meetings,
-            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386">a
+            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386" target="_blank">a
                 paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This
             coefficient measures
             the degree of dependency (but not the form of dependency) for two discrete random variables.</p>
@@ -265,7 +273,7 @@
 
     <div class="well">
         <h3>
-            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#">pg-utils: Utilities for working with
+            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#" target="_blank">pg-utils: Utilities for working with
                 PostgreSQL</a>
         </h3>
 
@@ -275,7 +283,7 @@
 
     <div class="well">
         <h3>
-            <a href="https://github.com/jackmaney/python-stdlib-list">Python Standard Library List</a>
+            <a href="https://github.com/jackmaney/python-stdlib-list" target="_blank">Python Standard Library List</a>
         </h3>
 
         <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-8), along with the
@@ -286,7 +294,7 @@
 
     <div class="well">
         <h3>
-            <a href="https://github.com/jackmaney/Diophantus">Diophantus</a>
+            <a href="https://github.com/jackmaney/Diophantus" target="_blank">Diophantus</a>
         </h3>
 
         <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a
@@ -307,21 +315,21 @@
 
             <li>
                 Python,
-                <a href="http://spark.apache.org/docs/latest/api/python/index.html">PySpark</a>,
-                <a href="https://pypi.org/project/h3/">H3</a>,
-                <a href="https://pypi.org/project/Shapely/">Shapely</a>,
-                <a href="http://pandas.pydata.org/">Pandas</a>,
-                <a href="http://www.numpy.org/">NumPy</a>,
-                <a href="https://www.scipy.org/">SciPy</a>,
-                <a href="http://scikit-learn.org/stable/">scikit-learn</a>,
-                <a href="https://requests.readthedocs.io/en/master/">Requests</a>,
-                <a href="http://matplotlib.org/">matplotlib</a>,
-                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/">seaborn</a>, PyCharm
+                <a href="http://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
+                <a href="https://pypi.org/project/h3/" target="_blank">H3</a>,
+                <a href="https://pypi.org/project/Shapely/" target="_blank">Shapely</a>,
+                <a href="http://pandas.pydata.org/" target="_blank">Pandas</a>,
+                <a href="http://www.numpy.org/" target="_blank">NumPy</a>,
+                <a href="https://www.scipy.org/" target="_blank">SciPy</a>,
+                <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn</a>,
+                <a href="https://requests.readthedocs.io/en/master/" target="_blank">Requests</a>,
+                <a href="http://matplotlib.org/" target="_blank">matplotlib</a>,
+                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a>, PyCharm
             </li>
 
             <li>
                 Relational Databases,
-                <a href="http://www.greenplum.com/">Greenplum</a> (Massively Parallel Processing Distributed System),
+                <a href="http://www.greenplum.com/" target="_blank">Greenplum</a> (Massively Parallel Processing Distributed System),
                 PostgreSQL, Oracle, MySQL, Microsoft SQL
                 Server, MS SQL, OLAP, SQL
             </li>
@@ -333,12 +341,12 @@
             <li>JSON, GeoJSON, Parquet, CSV</li>
 
             <li>
-                <a href="http://www.r-project.org/">R</a>
+                <a href="http://www.r-project.org/" target="_blank">R</a>
             </li>
 
             <li>
                 Perl,
-                <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared,
+                <a href="https://metacpan.org/module/Moose" target="_blank">Moose (OO Perl)</a>, DBI, threads, threads::shared,
                 Thread::Queue, Template::Toolkit
             </li>
 
@@ -348,13 +356,13 @@
 
             <li>Linux, Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
 
-            <li>The <a href="https://aylien.com/text-api/">Aylien text analysis API</a></li>
+            <li>The <a href="https://aylien.com/text-api/" target="_blank">Aylien text analysis API</a></li>
 
             <li>The
-                <a href="https://42matters.com/docs/overview">42matters API</a> for app metadata</li>
+                <a href="https://42matters.com/docs/overview" target="_blank">42matters API</a> for app metadata</li>
 
             <li>
-                <a href="http://infegy.com/social-media-analytics">Social Radar API</a>, Facebook Ads API
+                <a href="http://infegy.com/social-media-analytics" target="_blank">Social Radar API</a>, Facebook Ads API
             </li>
 
         </ul>
@@ -409,7 +417,7 @@
             <li>Greenplum User Training from Pivotal, 2014</li>
 
             <li>
-                Attended <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
+                Attended <a href="http://www.kdd.org/kdd2014/" target="_blank">KDD 2014</a>
             </li>
 
             <li>QlikView Developer Training from Qlik, 2013</li>
