--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -32,6 +32,11 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>Cerner Corporation</h3>
+        <p>Data Scientist - July 2020--Present</p>
+    </div>
+
+    <div class="well">
         <h3>TruFactor</h3>
         <p>Lead Data Scientist - November 2018--May 2020</p>
 
