Fixed formatting inconsistencies

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -98,12 +98,14 @@
 
                 <ul>
                     <li>
-                        <a href="http://whitepaper.pinsightmedia.com/age" target="_blank">Guess My Age: Age Discrepancies Across Ad
-                            Exchanges</a>
+                        <a href="http://whitepaper.pinsightmedia.com/age" target="_blank">
+                            Guess My Age: Age Discrepancies Across Ad Exchanges
+                        </a>
                     </li>
                     <li>
-                        <a href="https://pinsightmedia.com/blog/apptopicmodeling" target="_blank">There's an App for That: But What Does
-                            It Say About My Consumer?</a>
+                        <a href="https://pinsightmedia.com/blog/apptopicmodeling" target="_blank">
+                            There's an App for That: But What Does It Say About My Consumer?
+                        </a>
                     </li>
                 </ul>
             </li>
@@ -121,28 +123,27 @@
 
             <li>Prototyped a product for acquisition of financial advisors.</li>
 
-            <li>Contributed towards an Advisor Segmentation product, including a method of streamlining and summarizing
-                the differences
-                between segments.</li>
-
-            <li>Built a prototype of the Mapper Algorithm (as used in Topological Data Analysis) to better understand
-                high-dimensional
-                data sets. The prototype is written in Python and leverages a Greenplum cluster by way of SQL templates.
+            <li>
+                Contributed towards an Advisor Segmentation product, including a method of streamlining and summarizing the differences between segments.
             </li>
 
-            <li>Built prototypes for three components of DST's Predictive Wholesaling product, and assisted the AAG
-                Development
-                team in productionizing the prototypes.</li>
+            <li>
+                Built a prototype of the Mapper Algorithm (as used in Topological Data Analysis) to better understand high-dimensional data sets. The prototype is written in Python and leverages a Greenplum cluster by way of SQL templates.
+            </li>
 
-            <li>Created and prototyped a Share Retention metric that provides a measurement of "stickiness" of fund
-                holdings
-                that does not directly depend on price.</li>
+            <li>
+                Built prototypes for three components of DST's Predictive Wholesaling product, and assisted the AAG Development team in productionizing the prototypes.
+            </li>
+
+            <li>
+                Created and prototyped a Share Retention metric that provides a measurement of "stickiness" of fund holdings that does not directly depend on price.
+            </li>
 
             <li>Assisted in building models for a proof of concept for a client.</li>
 
-            <li>Mentored and taught Python to a few members of the Networking team, to facilitate the creation of a
-                Flask web
-                app to automate some types of network change requests.</li>
+            <li>
+                Mentored and taught Python to a few members of the Networking team, to facilitate the creation of a Flask web app to automate some types of network change requests.
+            </li>
 
             <li>Mentoring other members of the Data Science team.</li>
         </ul>
@@ -154,14 +155,15 @@
         <p>Data Scientist - May 2013--November 2013</p>
 
         <ul>
-            <li>Created and cross-validated probit regression models to find the most significant attributes upon which
-                to sort
-                call queues in order to increase customer retention.</li>
+            <li>
+                Created and cross-validated probit regression models to find the most significant attributes upon which to sort call queues in order to increase customer retention.
+            </li>
 
             <li>Built an ETL pipeline to import data from a new dialer system.</li>
 
-            <li>Delivered a proposal outlining options for a Data Warehouse solution, including pros and cons of each
-                option.</li>
+            <li>
+                Delivered a proposal outlining options for a Data Warehouse solution, including pros and cons of each option.
+            </li>
 
             <li>Built, Validated, and Deployed business intelligence reports using QlikView.</li>
         </ul>
@@ -172,9 +174,8 @@
         <p>Implementation Specialist (Contract) - January 2013--May 2013</p>
 
         <ul>
-            <li>Optimized the C2FO algorithm for Market Clearing Events, making it run an average of two orders of
-                magnitude
-                faster.
+            <li>
+                Optimized the C2FO algorithm for Market Clearing Events, making it run an average of two orders of magnitude faster.
             </li>
             <li>Organized the restructuring of several KPI business intelligence reports.</li>
             <li>Built, tested, and deployed user management tools for account managers.</li>
@@ -193,45 +194,50 @@
         </ul>
 
         <ul>
-            <li>Performed data mining and summarized results that contributed to the winning of a $50,000 advertiser
-                contract</li>
+            <li>
+                Performed data mining and summarized results that contributed to the winning of a $50,000 advertiser contract.
+            </li>
 
-            <li>Presented technical and mathematical concepts to non-technical audiences, including several layers of
-                management
-                and a venture capital investor.</li>
+            <li>
+                Presented technical and mathematical concepts to non-technical audiences, including several layers of management and a venture capital investor.
+            </li>
 
-            <li>Developed an application in Perl using
+            <li>
+                Developed an application in Perl using
                 <a href="https://metacpan.org/module/DBI" target="_blank">DBI</a> for
-                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B" target="_blank">k-means++ clustering</a>. This application is able
-                to handle data sets of millions of rows with 1--100 variables.</li>
-
-            <li>Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250
-                variables--that was
-                previously thought impossible to implement due to scale</li>
-
-            <li>Built, implemented, deployed, and maintained an ad category recommendation system for advertisers,
-                including
-                developing and measuring performance metrics</li>
-
-            <li>Implemented a genetic algorithm framework to use for behavioral targeting algorithms</li>
-
-            <li>Maintained and documented the ETL pipelines to the Data Analytics team, consisting of over 200 scripts
-                in Perl
-                and Python interfacing with Greenplum, PostgreSQL, Oracle, MySQL, MS SQL, and ActiveMQ </li>
-
-            <li>Refactored and maintained critical business intelligence reports used by machine learning scientists
+                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B" target="_blank">k-means++ clustering</a>. 
+                This application is able to handle data sets of millions of rows with 1--100 variables.
             </li>
 
-            <li>Prototyped a flexible, extensible ETL system to reduce a lot of boilerplate code in existing ETL scripts
+            <li>
+                Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250 variables--that was previously thought impossible to implement due to scale.
             </li>
 
-            <li>Created a web-based data dictionary to store metadata about tables in our warehouse. The front end was
-                written
-                in PHP with SQLite on the back-end to store the metadata.</li>
+            <li>
+                Built, implemented, deployed, and maintained an ad category recommendation system for advertisers, including developing and measuring performance metrics.
+            </li>
 
-            <li>Considered a resident expert of our data warehouse</li>
+            <li>Implemented a genetic algorithm framework to use for behavioral targeting algorithms.</li>
 
-            <li>Contributed to the on-boarding of two interns and two full-time employees</li>
+            <li>
+                Maintained and documented the ETL pipelines to the Data Analytics team, consisting of over 200 scripts in Perl and Python interfacing with Greenplum, PostgreSQL, Oracle, MySQL, MS SQL, and ActiveMQ.
+            </li>
+
+            <li>
+                Refactored and maintained critical business intelligence reports used by machine learning scientists.
+            </li>
+
+            <li>
+                Prototyped a flexible, extensible ETL system to reduce a lot of boilerplate code in existing ETL scripts.
+            </li>
+
+            <li>
+                Created a web-based data dictionary to store metadata about tables in our warehouse. The front end was written in PHP with SQLite on the back-end to store the metadata.
+            </li>
+
+            <li>Was considered a resident expert of our data warehouse.</li>
+
+            <li>Contributed to the on-boarding of two interns and two full-time employees.</li>
         </ul>
 
     </div>
@@ -241,17 +247,17 @@
         <p>Assistant Professor - August 2004--May 2008</p>
 
         <ul>
-            <li>Six peer-reviewed mathematical publications</li>
+            <li>Six peer-reviewed mathematical publications.</li>
 
-            <li>Directed two undergraduate Honors Theses and a Master's Thesis in mathematics</li>
+            <li>Directed two undergraduate Honors Theses and a Master's Thesis in mathematics.</li>
 
-            <li>Sole organizer and director of a regional undergraduate mathematics conference</li>
+            <li>Sole organizer and director of a regional undergraduate mathematics conference.</li>
 
-            <li>Taught several courses, including College Algebra, Trigonometry, Calculus (I--III), Foundations of
-                Mathematics,
-                Matrix Theory, and Abstract Algebra</li>
+            <li>
+                Taught several courses, including College Algebra, Trigonometry, Calculus (I--III), Foundations of Mathematics, Matrix Theory, and Abstract Algebra.
+            </li>
 
-            <li>Served and chaired several committees, including the Curriculum &amp; Instruction committee</li>
+            <li>Served and chaired several committees, including the Curriculum &amp; Instruction committee.</li>
         </ul>
 
     </div>
