Slight resume tweak

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -34,6 +34,12 @@
     <div class="well">
         <h3>Cerner Corporation</h3>
         <p>Data Scientist - July 2020--Present</p>
+
+        <ul>
+            <li>
+                Used AWS SageMaker, BlazingText, and association rule mining to analyze and enhance the Chart Assist Ontology.
+            </li>
+        </ul>
     </div>
 
     <div class="well">
@@ -321,6 +327,8 @@
         <ul>
 
             <li>AWS, EMR, EC2, S3</li>
+
+            <li>AWS SageMaker, BlazingText</li>
 
             <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
 
