--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -13,8 +13,7 @@
     <div class="well">
         <ul>
             <li>
-                Data Science professional with a decade of experience in the telecommunications, ad tech, and financial
-                service sectors.
+                Data Science professional with a decade of experience in the telecommunications, ad tech, financial service, and healthcare sectors.
             </li>
             <li>
                 Able to derive insights and extract business value from data sets with thousands to billions of rows.
@@ -37,7 +36,7 @@
 
         <ul>
             <li>
-                Used AWS SageMaker, BlazingText, and association rule mining to analyze and enhance the Chart Assist Ontology.
+                Used AWS SageMaker, BlazingText, and association rule mining to analyze and enhance the Chart Assist Ontology. Created a prototype that could make terminologists up to five times more efficient at matching medical codes to related ontology concepts.
             </li>
         </ul>
     </div>
